tests/nad_test_1/nad.yaml
apiVersion: "k8s.cni.cncf.io/v1"
kind: NetworkAttachmentDefinition
metadata:
  name: nginx-network
spec:
  config: '{
      "cniVersion": "0.3.0",
      "type": "host-device",
      "device": "l2sm-vNet"
    }'
---
apiVersion: "k8s.cni.cncf.io/v1"
kind: NetworkAttachmentDefinition
metadata:
  name: first-network
spec:
  config: '{
      "cniVersion": "0.3.0",
      "type": "host-device",
      "device": "l2sm-vNet"
    }'
