test_outputs/connlist/nad_test_1_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => default/dns-app[Deployment] : All Connections
0.0.0.0-255.255.255.255[External] => default/nginx-app[Deployment] : All Connections
0.0.0.0-255.255.255.255[External] => default/router-app[Deployment] : All Connections
default/dns-app[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
default/dns-app[Deployment] => default/nginx-app[Deployment] : All Connections
default/dns-app[Deployment] => default/router-app[Deployment] : All Connections
default/nginx-app[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
default/nginx-app[Deployment] => default/dns-app[Deployment] : All Connections
default/nginx-app[Deployment] => default/router-app[Deployment] : All Connections
default/router-app[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
default/router-app[Deployment] => default/dns-app[Deployment] : All Connections
default/router-app[Deployment] => default/nginx-app[Deployment] : All Connections

Permitted connectivity analyzed in secondary NAD first-network:
default/dns-app[Deployment] => default/router-app[Deployment] : All Connections
default/router-app[Deployment] => default/dns-app[Deployment] : All Connections

Permitted connectivity analyzed in secondary NAD nginx-network:
default/nginx-app[Deployment] => default/router-app[Deployment] : All Connections
default/router-app[Deployment] => default/nginx-app[Deployment] : All Connections

Workload-to-Networks Mapping:
default/dns-app[Deployment]: pod_network,first-network[NAD]
default/nginx-app[Deployment]: pod_network,nginx-network[NAD]
default/router-app[Deployment]: pod_network,first-network[NAD],nginx-network[NAD]
